<resources>
    <string name="app_name">Reiki Timer</string>
    <string name="login">Log In</string>
    <string name="logout">Log Out</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="reorder">Reorder</string>
    <string name="done">Done</string>
    <string name="drag_to_reorder">Drag to reorder</string>
    <string name="timer">Timer</string>
    <string name="confirm_delete">Are you sure you want to delete the selected item(s)? This cannot be undone.</string>
    <string name="add_reiki">Add Reiki</string>
    <string name="hint_title">Title</string>
    <string name="hint_description_optional">Description (optional)</string>
    <string name="play_reiki_music">Play Reiki Music</string>
    <string name="edit_reiki">Edit Reiki</string>
    <string name="add_position">Add Position</string>
    <string name="hint_duration">Duration (mm:ss)</string>
    <string name="edit_position">Edit Position</string>
    <string name="reiki_saved">Reiki saved!</string>
    <string name="reiki_play_pause_button">Play/Pause Reiki</string>
    <string name="position_duration">Duration (mm:ss)</string>
    <string name="prompt_new_position">Hit + to proceed</string>
    <string name="error_no_internet">No Internet access</string>
    <string name="retry">Retry</string>
    <string name="error_retrieving_reikis">Error retrieving Reikis</string>
    <string name="error_saving_reiki">Error saving Reiki</string>
    <string name="music">Music</string>
    <string name="clear_all_reikis">Clear All Reikis</string>
    <string name="logo_description">Reiki Timer Logo</string>
    <string name="lbl_signup">Sign Up</string>
    <string name="link_to_signup">No account yet? Create one</string>
    <string name="link_to_forgot_password">Forgot Password?</string>
    <string name="link_to_login">Already have an account? Log in</string>
    <string name="lbl_reset_password">Send Reset Link</string>
    <string name="to_position_list">To Position List</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_confirm_password">Confirm Password</string>
    <string name="lbl_subject">Subject</string>
    <string name="lbl_message">Message</string>
    <string name="lbl_send">Send</string>
    <string name="lbl_contact">Contact</string>
    <string name="enter_valid_name">Enter your name</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_valid_password">Enter valid password</string>
    <string name="enter_valid_email">Enter valid email</string>
    <string name="error_mismatch_passwords">The 2 passwords must be the same.</string>
    <string name="offline_notice">No Internet. Limited functionality.</string>
</resources>
