<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  tools:context="com.learnteachcenter.ltcreikiclockv3.reiki.list.ReikiListActivity">

  <item
    android:id="@+id/action_edit"
    android:title="@string/edit"
    android:icon="@drawable/ic_edit"
    app:showAsAction="never"/>
  <item
    android:id="@+id/action_delete"
    android:title="@string/delete"
    android:icon="@drawable/ic_delete"
    app:showAsAction="never"/>
  <item
    android:id="@+id/action_reorder"
    android:title="@string/reorder"
    android:icon="@drawable/ic_drag_handle"
    app:showAsAction="never"/>
  <item
    android:id="@+id/action_logout"
    android:title="@string/logout"
    app:showAsAction="never"/>
  <item
    android:id="@+id/action_clear_cache"
    android:title="Clear Cache"
    app:showAsAction="never" />

</menu>