<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".authentication.signup.SignUpActivity">

    <ImageView
            android:id="@+id/logo"
            android:src="@drawable/logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="126dp"
            android:layout_height="126dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/logo_description"/>

        <LinearLayout
                android:id="@+id/login_box"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/logo"
                app:layout_constraintLeft_toLeftOf="parent"
                android:paddingTop="24dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp">

            <!-- Name Label -->
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">
                <EditText android:id="@+id/input_name"
                          android:fontFamily="@font/lato_regular"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:inputType="textPersonName"
                          android:hint="@string/lbl_name" />
            </android.support.design.widget.TextInputLayout>

            <!-- Email Label -->
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">
                <EditText android:id="@+id/input_email"
                          android:fontFamily="@font/lato_regular"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:inputType="textEmailAddress"
                          android:hint="@string/lbl_email" />
            </android.support.design.widget.TextInputLayout>

            <!-- Password Label -->
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">
                <EditText android:id="@+id/input_password"
                          android:fontFamily="@font/lato_regular"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:inputType="textPassword"
                          android:hint="@string/lbl_password"/>
            </android.support.design.widget.TextInputLayout>

            <!-- Password Confirm Label -->
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">
                <EditText android:id="@+id/input_password_confirm"
                          android:fontFamily="@font/lato_regular"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:inputType="textPassword"
                          android:hint="@string/lbl_confirm_password"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                    android:id="@+id/btn_signup"
                    android:fontFamily="@font/lato_regular"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="24dp"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:text="@string/lbl_signup"/>

        </LinearLayout>
    <TextView android:id="@+id/link_login"
              android:fontFamily="@font/lato_regular"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginBottom="24dp"
              app:layout_constraintTop_toBottomOf="@+id/login_box"
              android:layout_marginTop="24dp"
              android:text="@string/link_to_login"
              android:gravity="center"
              android:textSize="16sp"/>

</android.support.constraint.ConstraintLayout>