<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".reiki.add.AddReikiActivity">

        <include android:id="@+id/toolbar" layout="@layout/toolbar" />

        <EditText
                android:id="@+id/input_reiki_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginRight="@dimen/dp_16"
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolbar"
                app:layout_constraintEnd_toEndOf="parent"
                android:inputType="textCapWords"
                android:hint="@string/hint_title"
                android:text=""/>
        <EditText
                android:id="@+id/input_reiki_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_16"
                android:layout_marginRight="@dimen/dp_16"
                app:layout_constraintTop_toBottomOf="@+id/input_reiki_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="start|top"
                android:inputType="textCapSentences"
                android:hint="@string/hint_description_optional"
                android:text=""/>
        <CheckBox
                android:id="@+id/ckb_play_music"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_marginStart="@dimen/dp_16"
                app:layout_constraintTop_toBottomOf="@+id/input_reiki_description"
                app:layout_constraintStart_toStartOf="parent"
                android:checked="true"
                android:text="@string/play_reiki_music"/>
        <Button
                android:id="@+id/btn_add_reiki"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginRight="@dimen/dp_16"
                android:layout_marginLeft="@dimen/dp_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ckb_play_music"
                android:background="@drawable/button_background"
                android:textColor="@color/colorWhite"
                android:text="@string/save"/>
    </android.support.constraint.ConstraintLayout>
</layout>