<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.learnteachcenter.ltcreikiclockv3.contact.ContactActivity">

    <include android:id="@+id/toolbar" layout="@layout/toolbar" />

    <LinearLayout
            android:id="@+id/login_box"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintLeft_toLeftOf="parent"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

        <!-- Name Label -->
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_name"
                      android:fontFamily="@font/lato_regular"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="textCapWords"
                      android:hint="@string/lbl_name" />
        </android.support.design.widget.TextInputLayout>

        <!-- Email Label -->
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_email"
                      android:fontFamily="@font/lato_regular"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="textEmailAddress"
                      android:hint="@string/lbl_email" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_subject"
                      android:fontFamily="@font/lato_regular"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="textEmailSubject"
                      android:hint="@string/lbl_subject"/>
        </android.support.design.widget.TextInputLayout>

        <!-- Password Confirm Label -->
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_message"
                      android:fontFamily="@font/lato_regular"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="textLongMessage|textMultiLine"
                      android:lines="4"
                      android:hint="@string/lbl_message"/>
        </android.support.design.widget.TextInputLayout>

        <TextView android:id="@+id/messageTextView"
                  android:fontFamily="@font/lato_regular"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="@dimen/dp_8"
                  android:layout_marginBottom="@dimen/dp_8"
                  android:textColor="@color/colorSuccess"
                  tools:text="Send Email Result"
                  android:gravity="center"
                  android:textSize="16dip"/>

        <Button
                android:id="@+id/btn_send"
                android:fontFamily="@font/lato_regular"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginBottom="@dimen/dp_24"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:text="@string/lbl_send"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
