<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".position.add.AddPositionActivity">

    <include android:id="@+id/toolbar" layout="@layout/toolbar" />

    <EditText
            android:id="@+id/et_position_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_24"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_16"
            android:layout_marginRight="@dimen/dp_16"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:inputType="textCapWords"
            android:hint="@string/hint_title"/>

    <EditText
            android:id="@+id/et_position_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_24"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_16"
            android:layout_marginRight="@dimen/dp_16"
            app:layout_constraintTop_toBottomOf="@+id/et_position_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:inputType="textCapWords"
            android:hint="@string/hint_duration"/>
    <Button
            android:id="@+id/btn_add_position"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginRight="@dimen/dp_16"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_16"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_position_duration"
            android:textColor="@color/colorWhite"
            android:background="@color/colorSecondary"
            android:text="@string/save"/>
</android.support.constraint.ConstraintLayout>
